# 08.06

./: .gitignore  AGENTS.md  COPYRIGHT.md  LICENSE  README.md  build-linux.sh  build-windows.bat  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: build.yml
scripts/: download-llama-win.ps1  generate-icons.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent_webview.rs  agent_workspace.rs  agents.rs  app_paths.rs  chat_template.rs  desktop_agent.rs  devices.rs  gguf_runner.rs  inference.rs  inference_cancel.rs  lib.rs  llama_cli.rs  llama_runtime.rs  llm_sanitize.rs  main.rs  memory.rs  moe.rs  network.rs  settings.rs  settings_engine.rs  storage_crypto.rs  stream_sink.rs
src/api/: browserFallback.ts  tauri.ts
src/components/: AgentsView.tsx  ChatView.tsx  DevicesView.tsx  HelpView.tsx  LanguagePicker.tsx  Layout.tsx  MemoryView.tsx  ModelsView.tsx  NetworkView.tsx  Onboarding.tsx  SettingsView.tsx
src/components/agents/: AgentStudio.tsx  AgentSystemsGuide.tsx  OrchestrationMonitor.tsx
src/components/chat/: MediaCapture.tsx  MessageBubble.tsx
src/components/chats/: ChatPermissionsModal.tsx  ChatSettingsPanel.tsx  ChatSidebar.tsx
src/components/devices/: AgentBrowser.tsx
src/components/help/: MoeGuide.tsx
src/components/models/: HuggingFaceBrowser.tsx  LocalModelsPanel.tsx  ModelSelect.tsx
src/components/settings/: InferenceRuntimePanel.tsx  SettingsPanels.tsx
src/components/ui/: EmptyState.tsx  PageIntro.tsx  SettingField.tsx  Slider.tsx  Toggle.tsx  Tooltip.tsx  ui.css
src/constants/: agents.ts  defaultAgentGroup.ts  rolePrompts.ts
src/hooks/: useAgentOrchestration.ts  useAgentStream.ts  useChatScroll.ts  useChatStream.ts  useDesktopAgent.ts  useModels.ts  useTheme.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  ru.json
src/store/: appStore.ts
src/styles/: agent-browser.css  global.css  material.css  welcome.css
src/utils/: migrateLegacyStorage.ts  sanitizeLlm.ts  theme.ts
