[package]
name = "silenium"
version = "1.0.0"
description = "Silenium — локальный AI-рантайм (© 2026 eturnercus)"
authors = ["eturnercus"]
license-file = "../LICENSE"
edition = "2021"

[lib]
name = "silenium_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["embedded-llama"]
embedded-llama = ["dep:llama-cpp-4", "dep:encoding_rs"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2"
llama-cpp-4 = { version = "0.3.1", features = ["openmp", "prebuilt"], optional = true }
encoding_rs = { version = "0.8.35", optional = true }
url = "2.5.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
